5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1613_1803.log
== TEST (2019-03-31 12:38:26) 
-- CODE:
digito_v = int(input("digite os 4 dígitos da sua conta bancária (não iremos roubá-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:38:51) 
-- CODE:
digito_v = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:39:07) 
-- CODE:
digito_v = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
print (d1, d2, d3, d4)
-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:39:44) 
-- CODE:
digito_v = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v%1000%100
d3 = digito_v%1000%100%10
d4 = digito_v%10
print (d1, d2, d3, d4)
-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:40:10) 
-- CODE:
digito_v = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v/1000
d2 = digito_v/1000/100
d3 = digito_v/1000/100/10
d4 = digito_v%10
print (d1, d2, d3, d4)
-- OUTPUT:
2.0 0.02 0.002 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:40:34) 
-- CODE:
digito_v = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
print (d1, d2, d3, d4)
-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:42:40) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma//11
print(digito_v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = digito_v//1000
NameError: name 'digito_v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:42:45) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = digito_v//1000
d2 = digito_v//1000//100
d3 = digito_v//1000//100//10
d4 = digito_v%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma//11
print(digito_v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = digito_v//1000
NameError: name 'digito_v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:10) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000
d2 = var//1000//100
d3 = var//1000//100//10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma//11
print(digito_v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = digito_v//1000
NameError: name 'digito_v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:43:17) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000
d2 = var//1000//100
d3 = var//1000//100//10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma//11
print(digito_v)


-- EXECUTION TIME:
0.249656
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:47) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000
d2 = var//1000//100
d3 = var//1000//100//10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(digito_v)


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:43:51) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000
d2 = var//1000//100
d3 = var//1000//100//10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(digito_v)


-- EXECUTION TIME:
0.120867
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
4
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:45:36) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(digito_v)


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:45:40) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(digito_v)


-- EXECUTION TIME:
0.133998
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
4
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
8
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:45:50) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(digito_v)


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:46:04) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d1 * 2 + d2 * 3 + d3 * 4 + d4 * 5
digito_v = soma%11
print(d1, d2, d3, d4)
print(digito_v)


-- OUTPUT:
2 0 0 0
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:46:37) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d4 * 2 + d3 * 3 + d2 * 4 + d1 * 5
digito_v = soma%11
print(digito_v)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:46:40) 
-- CODE:
var = int(input("digite os 4 digitos da sua conta bancaria (nao iremos rouba-lo): "))
d1 = var//1000%100%10
d2 = var//100%10
d3 = var//10%10
d4 = var%10
soma = d4 * 2 + d3 * 3 + d2 * 4 + d1 * 5
digito_v = soma%11
print(digito_v)


-- EXECUTION TIME:
0.21537
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
